<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
                  android:background="@color/white"
    tools:context="com.yolimaandrea.app_andrea.LogginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/logoapp"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/eUser"
        android:hint="@string/usuario"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/ePassword"
        android:hint="@string/contrasena"
        android:textSize="20sp"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/eRPassword"
        android:hint="@string/repetir_contrasena"
        android:textSize="20sp"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/eCorreo"
        android:hint="@string/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enviar"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:id="@+id/bSend"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:id="@+id/bCancel"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>
